--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"/Users/kelvinchoo/UCBE/PracticalApplication-11-1/data/vehicles.csv\")"
+    "data = pd.read_csv(\"vehicles.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "4  NaN  NaN         NaN    nc  "
       ]
      },
-     "execution_count": 237,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4431,7 +4431,7 @@
    "source": [
     "#### 3) Check for P-value & VIF after scaling\n",
     "We can see that condition number has dropped about 1/10 after scaling but still it's high\n",
-    "This is because Mileage column still have wide range of value after dropping outliers and scaling\n",
+    "This is because odometer column still have wide range of value after dropping outliers and scaling\n",
     "Year column have VIF over 10"
    ]
   },
